--- a/Ficha Lucifer.html
+++ b/Ficha Lucifer.html
@@ -1,22 +1,42 @@
 <html>
+<link rel="stylesheet" type="text/css" href="Styles.css">
+<style>
+    table {
+        width: 35%;
+    }
+    
+    td,
+    th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 6px;
+    }
+    
+    th {
+        background-color: rgba(0, 0, 0, 0.479);
+        color: rgb(255, 255, 255);
+    }
+</style>
 <h4 style="text-align: right"> <a href="Index.html">Inicio></a><a href="Gato.html">Gatos</a> </h4>
 
 <body>
-
-    <table border="6">
-        <tr>
-            <td><img src="Imagenes/Lucifer.jpg" alt="" width="350" height="250">
-                <br>
-                <td>Nombre:Lucifer
-                    <br> Edad:7
-                    <br> Género: Macho
-                    <br> Esterilizado: Si
-                    <br> N°Chip: 391347158
+    <center>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <tr>
+                <td><img src="Imagenes/Lucifer.jpg" alt="" width="450" height="350">
+                    <br>
+                    <td>Nombre:Lucifer
+                        <br> Edad:7
+                        <br> Género: Macho
+                        <br> Esterilizado: Si
+                        <br> N°Chip: 391347158
+                    </td>
                 </td>
-            </td>
 
-        </tr>
-    </table>
+            </tr>
+        </table>
+    </center>
+
 </body>
 
 </html>
