--- a/Gato.html
+++ b/Gato.html
@@ -1,7 +1,27 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="Styles.css">
     <title>Ayuda a un peludo</title>
+    <link rel="stylesheet" type="text/css" href="Styles.css">
+    <title>Ayuda a un peludo</title>
+    <style>
+        table {
+            width: 10%;
+        }
+        
+        td,
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 6px;
+        }
+        
+        th {
+            background-color: rgba(0, 0, 0, 0.479);
+            color: rgb(255, 255, 255);
+        }
+    </style>
 </head>
 
 <body>
@@ -14,16 +34,28 @@
 
     <h2>Nuestros Gatos que buscan familia:</h2>
     <center>
-        <table border="6">
-            <td><img src="Imagenes/Ginger.jpg" alt="" width="350" height="230"> <a href="Ficha Ginger.html">Ginger</a></td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="Imagenes/Ginger.jpg" alt="" width="350" height="230">
+                <td><a href="Ficha Ginger.html">
+                    Ginger</td>
+                </a>
+                </td>
         </table>
 
-        <table border="6">
-            <td><img src="Imagenes/Tommy.jpg" width="350" height="230"> <a href="Ficha Tommy.html">Tommy</a> </td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="Imagenes/Tommy.jpg" width="350" height="230">
+                <td><a href="Ficha Tommy.html">
+                    Tommy</td>
+                </a>
+                </td>
         </table>
 
-        <table border="6">
-            <td><img src="Imagenes/Lucifer.jpg" width="350" height="230"> <a href="Ficha Lucifer.html">Lucifer</a> </td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="Imagenes/Lucifer.jpg" width="350" height="230">
+                <td><a href="Ficha Lucifer.html">
+                    Lucifer</td></td>
+                </a>
+                </td>
         </table>
     </center>
 </body>
