--- a/Perro.html
+++ b/Perro.html
@@ -1,7 +1,25 @@
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="Styles.css">
     <title>Ayuda a un peludo</title>
+    <style>
+        table {
+            width: 10%;
+        }
+        
+        td,
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 6px;
+        }
+        
+        th {
+            background-color: rgba(0, 0, 0, 0.479);
+            color: rgb(255, 255, 255);
+        }
+    </style>
 </head>
 
 <body>
@@ -14,16 +32,22 @@
 
     <h2>Nuestros Perros que buscan familia:</h2>
     <center>
-        <table border="6">
-            <td><img src="imagenes/Cachulo.jpg" alt="" width="350" height="230"> <a href="Ficha Cachulo.html">Ginger</a></td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="imagenes/Cachulo.jpg" alt="" width="350" height="230">
+                <td><a href="Ficha Cachulo.html">Cachulo</a></td>
+            </td>
         </table>
 
-        <table border="6">
-            <td><img src="Imagenes/Flaca.jpg" width="350" height="230"> <a href="Ficha Flaca.html">Flaca</a> </td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="Imagenes/Flaca.jpg" width="350" height="230">
+                <td><a href="Ficha Flaca.html">Flaca</a></td>
+            </td>
         </table>
 
-        <table border="6">
-            <td><img src="Imagenes/Niña.jpg" width="350" height="230"> <a href="Ficha Niña.html">Niña</a> </td>
+        <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
+            <td><img src="Imagenes/Niña.jpg" width="350" height="230">
+                <td><a href="Ficha Niña.html">Niña</a></td>
+            </td>
         </table>
     </center>
 </body>
