--- a/Perro.html
+++ b/Perro.html
@@ -33,7 +33,7 @@
     <h2>Nuestros Perros que buscan familia:</h2>
     <center>
         <table border="6" style="background-color: rgba(185, 107, 52, 0.829);">
-            <td><img src="imagenes/Cachulo.jpg" alt="" width="350" height="230">
+            <td><img src="Imagenes/Cachulo.jpg" alt="" width="350" height="230">
                 <td><a href="Ficha Cachulo.html">Cachulo</a></td>
             </td>
         </table>
