--- a/Ficha Ginger.html
+++ b/Ficha Ginger.html
@@ -18,7 +18,7 @@
     }
 </style>
 <link rel="stylesheet" type="text/css" href="Styles.css">
-<h4 style="text-align: right"> <a href="Index.html">Inicio></a><a href="Gato.html">Gatos</a> </h4>
+<h4 style="text-align: right"> <a href="index.html">Inicio></a><a href="Gato.html">Gatos</a> </h4>
 
 <body>
     <center>
