--- a/Ficha Tommy.html
+++ b/Ficha Tommy.html
@@ -17,7 +17,7 @@
         color: rgb(255, 255, 255);
     }
 </style>
-<h4 style="text-align: right"> <a href="Index.html">Inicio></a><a href="Gato.html">Gatos</a> </h4>
+<h4 style="text-align: right"> <a href="index.html">Inicio></a><a href="Gato.html">Gatos</a> </h4>
 
 <body>
     <center>
