--- a/Perro.html
+++ b/Perro.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <h4 style="text-align: right"> <a href="Index.html">Inicio</a> </h4>
+    <h4 style="text-align: right"> <a href="index.html">Inicio</a> </h4>
     <center>
         <h1>Perros en adopción</h1>
     </center>
